<resources>
    <string name="app_name">Water_consumption_project</string>
    <string name="monitoring_of_consumption">Monitoring of consumption :</string>
    <string name="drink">Drink !</string>
    <string name="next_reminder_in_xh">Next reminder is at %1$s</string>
    <string name="consumption">%1$d ml</string>
    <string name="target">/ %1$d ml</string>
    <string name="water_is_your_new_best_friend">\"Water is your new best friend !\"</string>
    <string name="welcome_user">Welcome User !</string>
    <string name="menu_target_value">%1$d ml</string>
    <string name="there_is_no_reminder_set">There is no reminder set</string>
    <string name="reminder_of">Reminder of %1$s</string>
    <string name="menu_button">Menu button</string>
    <string name="settings">Settings</string>
    <string name="water_consumption_target">Water consumption target</string>
    <string name="edit">Edit</string>
    <string name="reminders">Reminders :</string>
    <string name="add_reminder_button">Add reminder button</string>
    <string name="notifications">Notifications</string>
    <string name="choose_your_quantity">Choose your quantity</string>
    <string name="_2000_ml">2000</string>
    <string name="close">Close</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="missing_reminder">Missing reminder</string>
    <string name="new_reminder">New reminder</string>
    <string name="choose_your_target">Choose your target</string>
</resources>