<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_gravity="center"
                android:layout_marginEnd="300dp"
                android:background="@drawable/button_rounded_gradient"
                android:gravity="center"
                android:src="@drawable/menu"
                android:textAllCaps="false"
                android:textColor="#FEFEFE"
                android:contentDescription="@string/menu_button" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/bell_button"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animate_bell" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_user_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/welcome_user"
                android:textAlignment="center"
                android:textSize="21.38sp" />

            <TextView
                android:id="@+id/quotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:text="@string/water_is_your_new_best_friend"
                android:textAlignment="center"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animate_bubble"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/animate_bubble" />

                <!-- Ajout d'un LinearLayout vertical pour empiler les TextView au centre de l'animation Lottie -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/animate_bubble"
                    app:layout_constraintEnd_toEndOf="@+id/animate_bubble"
                    app:layout_constraintStart_toStartOf="@+id/animate_bubble"
                    app:layout_constraintTop_toTopOf="@+id/animate_bubble">

                    <TextView
                        android:id="@+id/consumption_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/consumption"
                        android:textColor="#050505"
                        android:textSize="35sp" />

                    <TextView
                        android:id="@+id/target_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/target"
                        android:textAlignment="center"
                        android:textColor="#050505"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/reminder_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:text="@string/next_reminder_in_xh"
                android:textAlignment="center" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/drink_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/button_gradient"
            android:gravity="center"
            android:text="@string/drink"
            android:textAllCaps="false"
            android:textColor="#FEFEFE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/monitoring_consumption_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monitoring_of_consumption"
                android:textAlignment="center"
                android:textSize="21.38sp" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>